syntax = "proto3";

package blog;

option go_package = "blogpb/;blogpb";

message Post {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  Post post = 1;
}

service BlogService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);

  rpc GetPost(GetPostRequest) returns (GetPostResponse);

  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
}